--- a/src/CardsLayout.fxml
+++ b/src/CardsLayout.fxml
@@ -6,16 +6,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.221" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CardsController">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CardsController">
    <children>
-      <Pane prefHeight="350.0" prefWidth="450.0">
+      <Pane fx:id="p" prefHeight="385.0" prefWidth="582.0">
          <children>
             <Button fx:id="btnSolution" layoutX="24.0" layoutY="22.0" mnemonicParsing="false" onAction="#findSolution" text="Find a Solution" />
-            <TextField fx:id="txtTop" layoutX="164.0" layoutY="22.0" />
-            <Button fx:id="btnRefresh" layoutX="352.0" layoutY="22.0" mnemonicParsing="false" onAction="#refresh" text="Refresh" />
+            <TextField fx:id="txtTop" layoutX="164.0" layoutY="22.0" prefHeight="25.0" prefWidth="260.0" />
+            <Button fx:id="btnRefresh" layoutX="473.0" layoutY="22.0" mnemonicParsing="false" onAction="#refresh" text="Refresh" />
             <Label layoutX="24.0" layoutY="307.0" text="Enter an expression:" />
-            <TextField fx:id="txtBottom" layoutX="164.0" layoutY="302.0" />
-            <Button fx:id="btnVerify" layoutX="355.0" layoutY="302.0" mnemonicParsing="false" onAction="#verify" text="Verify" />
+            <TextField fx:id="txtBottom" layoutX="164.0" layoutY="302.0" prefHeight="25.0" prefWidth="260.0" />
+            <Button fx:id="btnVerify" layoutX="483.0" layoutY="302.0" mnemonicParsing="false" onAction="#verify" text="Verify" />
+            <Pane fx:id="pnCards" layoutX="14.0" layoutY="69.0" prefHeight="223.0" prefWidth="557.0" />
          </children>
       </Pane>
    </children>
